--- a/client/views/layout/header.html
+++ b/client/views/layout/header.html
@@ -1,7 +1,7 @@
 <!--
 This is the header template which will be displayed on top of the page.
 -->
-<template name="header">
+<template name="header_deprecated">
 	<header class="navbar">
 		<div class="navbar-inner">
 			<!--
