--- a/client/views/layout/layout.html
+++ b/client/views/layout/layout.html
@@ -2,7 +2,7 @@
 This is the layout template which will be displayed instead of the <body></body> tags.
 If you want to select another layout template change it inside the router.js file.
 -->
-<template name="layout">
+<template name="layout_deprecated">
 	<div class="container">
 		<!--
 		The navigation bar on top of the page.
