--- a/client/views/profile_page/profile_page.html
+++ b/client/views/profile_page/profile_page.html
@@ -1,5 +1,6 @@
 <template name="profilePage">
-	<div class="profilePage">
+	<div class="wrapper profilePage">
+    <div class="container">
 
 		<div class="well well-large">
 			<legend>Profiel</legend>
@@ -27,6 +28,6 @@
 			</table>
 
 		</div>
-
+    </div>
 	</div>
 </template>
