--- a/client/views/admin_page/admin_page.html
+++ b/client/views/admin_page/admin_page.html
@@ -3,7 +3,8 @@ This template displays the admin panel where the admin can
 edit the accounts of all users.
 -->
 <template name="adminPage">
-	<div class="adminPage">
+	<div class="wrapper adminPage">
+    <div class="container">
 
 		<!--
 		Create the Remove Modal.
@@ -92,6 +93,6 @@ edit the accounts of all users.
 				</tbody>
 			</table>
 		</div>
-
+  </div>
 	</div>
 </template>
