menu rearranged, example data-entry

--- a/client/views/layout/not_authorized.html
+++ b/client/views/layout/not_authorized.html
@@ -4,6 +4,6 @@ the client is not authorized to view the page.
 -->
 <template name="notAuthorized">
 	<div class="alert alert-error">
-		U bent niet bevoegd om deze pagina te bekijken.
+		You are not allowed to view this page.
 	</div>
 </template>
