--- a/client/views/layout/not_found.html
+++ b/client/views/layout/not_found.html
@@ -4,6 +4,6 @@ the requested page is not found.
 -->
 <template name="notFound">
 	<div class="alert alert-error">
-		De pagina is niet gevonden.
+		The page is lost in space.
 	</div>
 </template>
