--- a/client/views/includes/navigationbar.html
+++ b/client/views/includes/navigationbar.html
@@ -11,10 +11,12 @@
         <a class="brand" href="{{pathFor 'homePage'}}"><img src="/ctt-transparant.png"/></a>
         <div class="nav-collapse">
           <ul class="nav">
-            <li class="{{active}}"><a href="{{pathFor 'homePage'}}"><i class="icon-home icon-black"></i> Home</a></li>
+            <li class="{{active}}"><a href="{{pathFor 'homePage'}}"><i class="fa fa-home"></i> Home</a></li>
             {{#if currentUser}}
+            <li class="{{active}}"><a href="{{pathFor 'revenues'}}"><i class="fa fa-eur"></i> Revenues</a></li>
+             <li class="{{active}}"><a href="{{pathFor 'moves'}}"><i class="fa fa-truck"></i> Moves</a></li>
             <li class="{{active}} dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Performance <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-tachometer"></i> Performance <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="#">Moves per manhour</a></li>
                 <li><a href="#">KwH Factor</a></li>
@@ -25,25 +27,22 @@
                 <li><a href="#">KwH per Move</a></li>
                 <li><a href="#">Terminal Liters per truckmove</a></li>
               </ul>
-            </li>
-            <li class="{{active}}"><a href="{{pathFor 'revenues'}}">Revenues</a></li>
-            <li class="{{active}}"><a href="{{pathFor 'moves'}}">Moves</a></li>
-            
+            </li>            
             <li class="{{active}} dropdown">
-              <a href="{{pathFor formsList}}" class="dropdown-toggle" data-toggle="dropdown">Forms <b class="caret"></b></a>
+              <a href="{{pathFor formsList}}" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-list-alt"></i> Forms <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="{{pathFor 'data-entry'}}">example data-entry 1</a></li>
                 <li><a href="#">example data-entry 2</a></li>
               </ul>
             </li>
             {{/if}}
-            <li class="{{active}}"><a href="{{pathFor 'about'}}">About</a></li>
+            <li class="{{active}}"><a href="{{pathFor 'about'}}"><i class="fa fa-question"></i> About</a></li>
            	{{#if isInRole 'Default'}}
-            <li class={{active}}><a href="{{pathFor 'profilePage'}}">Profile</a>
+            <li class={{active}}><a href="{{pathFor 'profilePage'}}"><i class="fa fa-user"></i> Profile</a>
 			      {{/if}}
             {{#if isInRole 'Admin'}}
-            <li class="{{active}}"><a href="{{pathFor 'profilePage'}}">Profile</a>
-            <li class="{{active}}"><a href="{{pathFor 'adminPage'}}">Admin</a>
+            <li class="{{active}}"><a href="{{pathFor 'profilePage'}}"><i class="fa fa-user"></i> Profile</a>
+            <li class="{{active}}"><a href="{{pathFor 'adminPage'}}"><i class="fa fa-wrench"></i> Admin</a>
 			      {{/if}}
           </ul>
           <ul class="nav pull-right">
