added wrapper and container around verification page.

--- a/client/views/verificating_page/verificating_page.html
+++ b/client/views/verificating_page/verificating_page.html
@@ -3,7 +3,8 @@ This template displays the verificating page. When the user did not completed
 its account is need to fill in all additional information.
 -->
 <template name="verificatingPage">
-	<div class="verificatingPage">
+	<div class="verificatingPage wrapper">
+    <div class="container">
 
 		<!--
 		If the user filled all its information he is pending for the verification.
@@ -62,6 +63,6 @@ its account is need to fill in all additional information.
 
 			</div>
 		{{/if}}
-
+    </div>
 	</div>
 </template>
