--- a/client/views/verificating_page/verificating_page.html
+++ b/client/views/verificating_page/verificating_page.html
@@ -12,9 +12,9 @@ its account is need to fill in all additional information.
 		{{#if isPending}}
 
 			<div class="well well-large">
-				<legend>Verificatie</legend>
-				U heeft uw account ter verificatie aangeboden.</br>
-				Op dit moment is uw account in afwachting van verificatie.
+				<legend>Verification</legend>
+				Your account had been offered to the administrators for verification.</br>
+				Please be patient until this verification has been done.
 			</div>
 
 		<!--
@@ -24,28 +24,29 @@ its account is need to fill in all additional information.
 		{{else}}}
 
 			<div class="well well-large">
-				<legend>Gegevens</legend>
-				Vul uw gegevens in om uw account ter verificatie aan te bieden.</br>
-				Zodra alle verplichte velden zijn ingevuld worden uw gegevens geverifieerd.</br>
-				Velden met een (*) zijn verplichte velden.
+				<legend>User Account</legend>
+        Please fill in all the fields to be able to offer your account</br>
+				for verification to the administrators.</br>
+				As soon as all obligatory fields have been filled the account can be verified.</br>
+				Fields marked with a (*) are obligatory.
 
 				<table class="verificatingTable" id="personalTable">
 					<thead>
 						<tr>
-							<th colspan="2" class="heading">Persoonlijke gegevens</th>
+							<th colspan="2" class="heading">User details</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
-							<td class="title">Email adres *</td>
+							<td class="title">Emailadres *</td>
 							<td class="field"><input id="emailField" type="text" class="textfield"></input></td>
 						</tr>
 						<tr>
-							<td class="title">Volledige naam *</td>
+							<td class="title">Full name *</td>
 							<td class="field"><input id="nameField" type="text" class="textfield"></input></td>
 						</tr>
 						<tr>
-							<td class="title">Taak *</td>
+							<td class="title">Role *</td>
 							<td class="field">
 								<select id="roleField" class="dropdown">
 									<option value=""></option>
@@ -58,7 +59,7 @@ its account is need to fill in all additional information.
 					</tbody>
 				</table>
 
-				<button class="btn btn-default btn-xs saveButton">Opslaan</button>
+				<button class="btn btn-default btn-xs saveButton">Save</button>
 				<button class="btn btn-default btn-xs resetButton">Reset</button>
 
 			</div>
