translated profilepage to english

--- a/client/views/profile_page/profile_page.html
+++ b/client/views/profile_page/profile_page.html
@@ -3,25 +3,25 @@
     <div class="container">
 
 		<div class="well well-large">
-			<legend>Profiel</legend>
+			<legend>Profile</legend>
 
 			<table class="profileTable" id="profile">
 				<thead>
 					<tr>
-						<th colspan="2" class="heading">Persoonlijke gegevens</th>
+						<th colspan="2" class="heading">User Account</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr>
-						<td class="title">Email adres</td>
+						<td class="title">Emailadres</td>
 						<td class="field">{{email}}</td>
 					</tr>
 					<tr>
-						<td class="title">Volledige naam</td>
+						<td class="title">Full name</td>
 						<td class="field">{{fullname}}</td>
 					</tr>
 					<tr>
-						<td class="title">Taak</td>
+						<td class="title">Role</td>
 						<td class="field">{{role}}</td>
 					</tr>
 				</tbody>
