added 2014 to footer

--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -2,7 +2,7 @@
 	<!-- Footer specifics -->
 	<footer class="footer">
     <div class="container">
-      <p>Copyright &copy 2013 <a href="http://www.exomodal.com">eXomodal</a>, <a href="http://www.ctt-twente.nl">Combi Terminal Twente B.V.</a></p>
+      <p>Copyright &copy 2013-2014 <a href="http://www.exomodal.com">eXomodal</a>, <a href="http://www.ctt-twente.nl">Combi Terminal Twente B.V.</a></p>
     </div>
   </footer>
 
