changed the adminpage in adminUser and adminConfig and rerouted

--- a/client/views/admin_page/admin_user.html
+++ b/client/views/admin_page/admin_user.html
@@ -2,8 +2,8 @@
 This template displays the admin panel where the admin can
 edit the accounts of all users.
 -->
-<template name="adminPage">
-	<div class="wrapper adminPage">
+<template name="adminUser">
+	<div class="wrapper adminUser">
     <div class="container">
 
 		<!--
