--- a/client/views/includes/navigationbar.html
+++ b/client/views/includes/navigationbar.html
@@ -46,7 +46,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-wrench"></i> Admin<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="{{pathFor 'adminUser'}}">Users</a></li>
-                <li><a href="#">Configuration</a></li>
+                <li><a href="{{pathFor 'adminConfig'}}">Configuration</a></li>
               </ul>
             </li>
 			      {{/if}}
