--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,9 +1,5 @@
-<!--
-This template displays the home page.
--->
-
-<template name="homePage">
-    <div class="wrapper homePage">
+<template name="home">
+    <div class="wrapper">
         <div class="container">
             <header class="hero-unit">
                 <h1>advanced KPI Tooling</h1>
