--- a/client/views/includes/errors.html
+++ b/client/views/includes/errors.html
@@ -2,10 +2,14 @@
 This template displays all errors for the current client.
 -->
 <template name="errors">
-	<div class="errors row-fluid">
-		{{#each error}}
-			{{> error}}
-		{{/each}}
+	<div class="wrapper">
+    	<div class="container">
+			<div class="errors row-fluid">
+				{{#each error}}
+					{{> error}}
+				{{/each}}
+			</div>
+		</div>
 	</div>
 </template>
 
@@ -14,7 +18,7 @@ This template displays one single error.
 It will be used by the 'errors' template above.
 -->
 <template name="error">
-	<div class="alert alert-error">
+	<div class="alert alert-danger">
 		<button type="button" class="close" data-dismiss="alert">&times;</button>
 		{{message}}
 	</div>
