--- a/client/views/verificating/verificating.html
+++ b/client/views/verificating/verificating.html
@@ -2,7 +2,7 @@
 This template displays the verificating page. When the user did not completed
 its account is need to fill in all additional information.
 -->
-<template name="verificatingPage">
+<template name="verificating">
 	<div class="verificatingPage wrapper">
     <div class="container">
 
@@ -25,7 +25,7 @@ its account is need to fill in all additional information.
 
 			<div class="well well-large">
 				<legend>User Account</legend>
-        Please fill in all the fields to be able to offer your account</br>
+        		Please fill in all the fields to be able to offer your account</br>
 				for verification to the administrators.</br>
 				As soon as all obligatory fields have been filled the account can be verified.</br>
 				Fields marked with a (*) are obligatory.
