Added collections, changed name configuration collection, edits on dynamic dataentry.

--- a/client/views/formsList/dataentry.html
+++ b/client/views/formsList/dataentry.html
@@ -5,7 +5,7 @@
 
             {{setForm}}
 
-            <form class='form-horizontal'>
+            <form class='form-horizontal' onsubmit="return false">
 
                 <fieldset>
 
@@ -271,7 +271,7 @@
                     
                     <div class='control-group'>
                         <div class='controls'>
-                            <button class="btn btn-primary">
+                            <button class="btn btn-primary submit">
                                 <i class="icon-user icon-white"></i> Submit
                             </button>
                         </div>
