--- a/client/views/verificating/verificating.html
+++ b/client/views/verificating/verificating.html
@@ -11,10 +11,9 @@ its account is need to fill in all additional information.
 		-->
 		{{#if isPending}}
 
-			<div class="well well-large">
-				<legend>Verification</legend>
-				Your account had been offered to the administrators for verification.</br>
-				Please be patient until this verification has been done.
+			<div class="hero-unit">
+				<h1>Verification<h1>
+        <p>Your account had been offered to the administrators for verification. Please be patient until this verification has been done.</p>
 			</div>
 
 		<!--
@@ -23,17 +22,15 @@ its account is need to fill in all additional information.
 		-->
 		{{else}}}
 
-			<div class="well well-large">
-				<legend>User Account</legend>
-        		Please fill in all the fields to be able to offer your account</br>
-				for verification to the administrators.</br>
-				As soon as all obligatory fields have been filled the account can be verified.</br>
-				Fields marked with a (*) are obligatory.
+			<div class="hero-unit">
+				<h1>Verification</h1>
+        <p>Please fill in all the fields to be able to offer your account for verification to the administrators. As soon as all obligatory fields have been filled the account can be verified.</p>
+        <p>Fields marked with a (*) are required.</p>
 
 				<table class="verificatingTable" id="personalTable">
 					<thead>
 						<tr>
-							<th colspan="2" class="heading">User details</th>
+              <th colspan="2" class="heading"><h3>User details</h3></th>
 						</tr>
 					</thead>
 					<tbody>
@@ -59,8 +56,8 @@ its account is need to fill in all additional information.
 					</tbody>
 				</table>
 
-				<button class="btn btn-default btn-xs saveButton">Save</button>
-				<button class="btn btn-default btn-xs resetButton">Reset</button>
+				<button class="btn btn-info btn-lg saveButton">Save</button>
+				<button class="btn btn-danger btn-lg resetButton">Reset</button>
 
 			</div>
 		{{/if}}
