--- a/client/views/includes/navigationbar.html
+++ b/client/views/includes/navigationbar.html
@@ -1,6 +1,6 @@
 <template name="navigationbar">
   <!-- Navigation bar specifics -->
-  <div class="navbar navbar-default">
+  <div class="navbar navbar-static-top">
     <div class="navbar-inner">
       <div class="container">
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
