Created example data and hidden fields in the dynamic forms

--- a/client/views/formsList/dataentry.html
+++ b/client/views/formsList/dataentry.html
@@ -32,6 +32,9 @@
                                             {{/each}}
                                         </select>
                                     {{/if}}
+                                    {{#if isEqual this.type "hidden"}}
+                                        <input type='hidden' id='{{this.name}}' value='{{this.default}}'>
+                                    {{/if}}
                                     {{#if isEqual this.type "text"}}
                                         TEXT FIELD</br>
                                     {{/if}}
